added new pages
created week 11 for 391 with new content

--- a/modules/help/_posts/2017-01-01-help.md
+++ b/modules/help/_posts/2017-01-01-help.md
@@ -7,8 +7,8 @@ permalink: /:title/
 
 ## Help Quick Links
 
-- [Course Issues Forum](https://github.com/Montana-Media-Arts/441-WebTech-Spring2020/issues)
-- [Course Discord](https://discord.gg/RYU8TZB)
+- [Course Issues Forum](https://github.com/Montana-Media-Arts/391-mobile-gaming-Spring2020-course/issues)
+- [Course Discord](https://discord.gg/AF6EYH4)
 - [Email Michael Cassens](mailto:michael.cassnes@umontana.edu?subject=441%20Question)
 
 ## Help Procedures
@@ -16,9 +16,9 @@ permalink: /:title/
 Do the following to get help with problems.
 
 1. Google the problem.
-2. Post a message to the [Course Discord](https://discord.gg/RYU8TZB)
+2. Post a message to the [Course Discord](https://discord.gg/AF6EYH4)
     - Discord is like a massive chat where everyone can talk to one another in real time and help each other out with issues or just chat.
-3. Post to the [course issues forum](https://github.com/Montana-Media-Arts/220-creative-coding2-Spring2020-course/issues).
+3. Post to the [course issues forum](https://github.com/Montana-Media-Arts/391-mobile-gaming-Spring2020-course/issues).
     - The advantage to the GitHub issues forum is its advanced system for including formatted code. This will help with problem solving.
 4. Get help from [Michael Cassens]({{site.baseurl}}/instructors/)
     - If you have a high level problem, or need help that no one can offer, please contact Michael Cassens (me, the one writing all of this).
