--- a/modules/syllabus/_posts/2017-01-01-syllabus.md
+++ b/modules/syllabus/_posts/2017-01-01-syllabus.md
@@ -5,13 +5,13 @@ permalink: /:title/
 
 # MART 441 - Web Technologies<br />Syllabus
 
-Date modified: 1-5-2020
+Date modified: 3-14-2020
 
 **Table of Contents**
 
 <!-- TOC depthFrom:1 depthTo:3 withLinks:1 updateOnSave:1 orderedList:0 -->
 
-- [MART 441 - Web Technologies<br />Syllabus](#mart-441-web-technologiesbr-syllabus)
+- [MART 391 - Mobile Gaming<br />Syllabus](#)
 - [Course Overview](#course-overview)
 	- [Description](#description)
 	- [Objectives](#objectives)
@@ -35,12 +35,7 @@ Date modified: 1-5-2020
 
 ## Description
 
-This class is designed to build upon what you learned in Creative Coding 1 and give you a new perspective on writing code along with interactive pieces.  This course focuses on reinforcing programming concepts using Processing, Arduino and 3D Printing.  There will be hands-on opportunities so that you can become proficient in using these tools.
-
-●	General Computing Concepts
-●	Logical Reasoning and Critical Thinking
-●	Multiple programming paradigms
-
+This class is designed to cover several topics in mobile application programming.  
 
 
 
@@ -48,10 +43,14 @@ This class is designed to build upon what you learned in Creative Coding 1 and g
 
 Upon completing this course, a student will be able to: 
 
+Explain the fundamental concepts that are essential to mobile application development, including but not limited to:
 
-●	Understand programming concepts and build visually interactive programs using Processing
-●	Interact with Arduino boards
-●	Interact and build 3D models and art pieces
+•	Leverage game design techniques to implement a mobile application on Android and iOS
+•	Integrate specific assets effectively into a mobile application
+•	Work with a diverse project team
+•	Implement a mobile application using Java, Swift or Xamarin
+•	Generate and apply test plans for a mobile application
+•	Deploy a mobile application to the store
 
 
 ## Professor
@@ -68,10 +67,10 @@ Upon completing this course, a student will be able to:
 - By Appointment
 ## Course Websites
 
-- [Creative Coding 2 --- Main Website](ttps://montana-media-arts.github.io/220-creative-coding2-Spring2020-course/)
+- [Mobile Gaming --- Main Website](https://montana-media-arts.github.io/391-mobile-gaming-Spring2020-course/week-11/overview)
 repository holds code examples, and the issues board.)
 - [Direct Link to Course Moodle Shell](https://moodle.umt.edu/)
-- [Syllabus Link](ttps://montana-media-arts.github.io/220-creative-coding2-Spring2020-course/syllabus)
+- [Syllabus Link](https://montana-media-arts.github.io/391-mobile-gaming-Spring2020-course/syllabus)
 
 
 
@@ -108,6 +107,7 @@ Coding is hard. But, messy code, documents, and files will make it more difficul
         - GitHub's [Atom](https://atom.io).
         - Microsoft's [Visual Studio Code](https://code.visualstudio.com)
 		- Unity [Unity](https://store.unity.com/?_ga=2.55932651.113442286.1584147650-1062919808.1581789921#plans-individual)
+		- Microsoft's Visual Studio 2019
 -   **Git**
 	-   You will need to use Git; a free and open source distributed version control system. This should already be installed on your computer.
 	-   You can work with git via the terminal or [command line](https://git-scm.com/book/en/v2/Git-Basics-Getting-a-Git-Repository).
@@ -195,7 +195,7 @@ Grades will be determined according to the following breakdown:
 
 | Grade Category 		| Total % 	|
 |:---------------------:|:---------:|
-| Regular Assignments	| 50%		|
+| Regular Assignments	| 60%		|
 | Final Project 		| 40%		|
 
 
