--- a/modules/week-11/_posts/2000-01-01-overview.md
+++ b/modules/week-11/_posts/2000-01-01-overview.md
@@ -18,6 +18,6 @@ Homework Due: {{ site.data.dates[page.module][1] }}
 <br />
 
 
-This week we are going to start on our online journey talking about Unity.  It's a powerful Game Engine that allows us to create any kind of game we want. However, we are going to stick to the basics and use some tools that are built in so we can focus on design and avoid some of the complexity.
+This week it's all about setting up the compiling environment and making sure you can compile in Cordova whether you are on a PC or a Mac.  It is a little tricky, but we will work out way through it and make sure we get something to work by the end of the week.
 
 <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/3z8djWYeqhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
