--- a/modules/week-11/_posts/2002-01-02-handson.md
+++ b/modules/week-11/_posts/2002-01-02-handson.md
@@ -6,8 +6,32 @@ jotted: true
 
 # Hands On Activities
 
-What's important in any of these lessons is trying stuff out.  Now that you know how to add an **enemy** try creating a new one and have it also collide, cause damage and then destruct after colliding.
+In this hands-on activity, I want you to create page that not only has some elements on the page, but has some styles attached to it.  I also want you to add some JavaScript that will alter text, color, or both when a button is pressed.  If you get really ambitious, you could do it on a timer and have it done randomly.
 
-Next, if you feel ambitious, see if you can get the obstacles to rotate while falling. Have at least 3 obstacles.
+<div id="jotted-demo-1" class="jotted-theme-stacked"></div>
+
+<script>
+    new Jotted(document.querySelector("#jotted-demo-1"), {
+    files: [
+        {
+            type: "js",
+            hide: false,
+            url:"https://raw.githubusercontent.com/Montana-Media-Arts/441-WebTech/master/lecture_code/02/02/script.js"
+        },
+        {
+            type: "html",
+            hide: false,
+            url:"https://raw.githubusercontent.com/Montana-Media-Arts/441-WebTech/master/lecture_code/02/02/02_js_outside_html.html"
+
+    }],
+    showBlank: false,
+    showResult: true,
+    runScripts: false,
+    plugins: [
+        { name: 'ace', options: { "maxLines": 100 } },
+        // { name: 'console', options: { autoClear: true } },
+    ]
+});
+</script>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gGr5KaucfTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
