--- a/modules/week-11/_posts/2010-01-01-homework.md
+++ b/modules/week-11/_posts/2010-01-01-homework.md
@@ -6,12 +6,13 @@ jotted: false
 
 # Homework
 
-In this homework, you are going to experiment and create a space game. Your main objective is to avoid the obstacles while attempting to collect all the collectables before you run out of health.
+In this homework, you are going to experiment with Cordova and make sure you can create at least an android application.  If you have only a Mac that is okay, you should still be able to install and emulate an Android application from your machine. You are going to create a small application that displays what you plan on doing this time of social distancing.  You should have at three pages that show all the ways you plan on doing this.  The pages must link to one another, use a style sheet and incorporate JavaScript. How you do it is up to you.
 
-* Add a background. It's up to you what you put on there.
-* If you are hit, you should lose health.  If you run out of health, the game should be over.
-* You should also have collectibles.  You are to create at least five obstacles and they should either chase or patrol. Your choice!
-* There should be at least 5 collectibles as well. 
-* If you collect everything, you should win.
+## Technical Specfications
 
-
+* Create a Cordova Application
+* Have at least 3 pages
+* Use HTML, CSS and JavaScript
+* Link the 3 pages together
+* Compile using Cordova and create an Android APK.
+* Turn in all pages and your APK.
