removed a page and updated text

--- a/modules/week-11/_posts/2010-01-01-homework.md
+++ b/modules/week-11/_posts/2010-01-01-homework.md
@@ -14,5 +14,6 @@ In this homework, you are going to experiment with Cordova and make sure you can
 * Have at least 3 pages
 * Use HTML, CSS and JavaScript
 * Link the 3 pages together
+* Have at least one image per page.
 * Compile using Cordova and create an Android APK.
 * Turn in all pages and your APK.
