commented out old videos

--- a/modules/week-11/_posts/2002-01-02-handson.md
+++ b/modules/week-11/_posts/2002-01-02-handson.md
@@ -34,4 +34,5 @@ In this hands-on activity, I want you to create page that not only has some elem
 });
 </script>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/gGr5KaucfTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gGr5KaucfTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
