--- a/modules/week-11/_posts/2002-01-02-handson.md
+++ b/modules/week-11/_posts/2002-01-02-handson.md
@@ -27,8 +27,8 @@ In this hands-on activity, I want you to create page that not only has some elem
     showBlank: false,
     showResult: true,
     runScripts: false,
-    plugins: [
-        { name: 'ace', options: { "maxLines": 500 } },
+   plugins: [
+        { name: 'ace', options: { "maxLines": 100, "Lines": 100 } },
         // { name: 'console', options: { autoClear: true } },
     ]
 });
