updated the text for week 12

--- a/modules/week-12/_posts/2003-02-01-homework.md
+++ b/modules/week-12/_posts/2003-02-01-homework.md
@@ -5,13 +5,14 @@ module: 12
 
 # Homework
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ImyJjyghjP8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/ImyJjyghjP8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+-->
+In this assignment, you are going to create a simple Unity platform game. You can use whatever assets you want. If you want to use the ones that are in the store, that is fine. If you want to use yours that is fine too. Just make the user move around on the platform and then at least build an Android application.  I know I keep having you build Android applications, but it's easier for PC and Mac users since they can both build Android applications.
 
-In this assignment, you are going to implement something that fulfills the following objectives. Be creative and have fun!
-
-1. You have have at least 2 objects on your canvas.
-2. One object is to be controlled by the user
-3. One object should move autonomously.
-4. The background should change if they collide.
-5. The objects should change size if they collide.
-6. Objects cannot leave the canvas edges.
+1. Use Unity to build a simple platformer.
+2. No need for a score or health unless you want to implement.
+3. Must have tilemap.
+4. Must have a player that moves, no animation required unless you want to implement.
+5. The make the player jump over obstacles with the space bar.
+6. Compile your application for Android.
+7. Upload the project and .apk to your repository. If it's too big, put it in Box and upload the link to Box.
