--- a/modules/week-12/_posts/2000-01-01-overview.md
+++ b/modules/week-12/_posts/2000-01-01-overview.md
@@ -11,8 +11,6 @@ module: 12
 
 Active: {{ site.data.dates[page.module][0] }}
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7MeuHO_Zz44" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/7MeuHO_Zz44" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
-Quick note -- I am sorry; I mislabeled the videos originally as Week 11 because I forgot about Spring break.  I hope I don't cause any confusion!
-
-What is HTML5?  Simply put, HTML5 is the successor of HTML4.  This semester, we have been working primarily with HTML4.  Most of those elements and tags still exist in HTML5.  However, HTML5 gives us a number new tags in which we can employ.  We will cover some of the new tags and how we can use them in our applications.  We will pay particular focus to the audio, video, and canvas tags as they will allow us to create web based games.
+This week we are going to focus on creating a simple Unity project that we can export  into a mobile application.  Unity makes it simple to create cross-platform projects for both Android and iOS while also allowing for web and stand-alone projects too.  The biggest thing we must think about is the controls.  Otherwise, it works well.
