--- a/modules/week-12/_posts/2003-02-01-homework.md
+++ b/modules/week-12/_posts/2003-02-01-homework.md
@@ -5,8 +5,8 @@ module: 12
 
 # Homework
 
-<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/ImyJjyghjP8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
--->
+<iframe width="560" height="315" src="https://umontana.zoom.us/rec/play/68J8Ju2qrDo3HtGV4gSDVvZxW9S4e_2shnMc_6BcnUvmAHNQNwL3Y7tEN7ODLlQGjjwZSdWUi2iIKHs7?continueMode=true" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 In this assignment, you are going to create a simple Unity platform game. You can use whatever assets you want. If you want to use the ones that are in the store, that is fine. If you want to use yours that is fine too. Just make the user move around on the platform and then at least build an Android application.  I know I keep having you build Android applications, but it's easier for PC and Mac users since they can both build Android applications.
 
 1. Use Unity to build a simple platformer.
