--- a/modules/week-12/_posts/2000-02-01-Unity.md
+++ b/modules/week-12/_posts/2000-02-01-Unity.md
@@ -11,7 +11,7 @@ If you have never used Unity, there is a few things in which we should be aware.
 
 Unity uses centralized software called the Unity Hub, allowing users to install different versions of Unity on the same machine.  The Unity Hub allows you to support today's projects from today as well as ones in the future or even previous projects.
 
-1. First go to Unity [Unity] (https://unity.com/)
+1. First go to Unity [Unity](https://unity.com/)
 2. Next, Click on Games
 3. Click on Get Started.
 4. Click the Individual Tab.
@@ -29,7 +29,7 @@ Once you have the Unity Hub, you can install different versions of Unity.  I rec
 1. In the Unity Hub, click Installs.
 2. Click Add.
 3. Select the most recent version (should be on top) and click Next.
-4. In the Add Modules window, select either Windows or iOS.
+4. In the Add Modules window, select either Android and iOS.
 5. Click Done.
 
 Wait for the install and then click on Projects.
@@ -39,4 +39,4 @@ Wait for the install and then click on Projects.
 3. In the Project Name, enter any name that sounds good to you.
 4. Click Create.
 
-<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/WEBWhS3NwF8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+<iframe width="560" height="315" src="https://umontana.zoom.us/rec/play/7sIodOD8-zM3TIDAtQSDUKV5W9Tve_-s0iUbqfoFzU3kUiNQZ1qvY-FGYLEVqZoixJIAwaXTXk4QhlDw?continueMode=true" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
