--- a/modules/week-12/_posts/2000-02-01-Unity.md
+++ b/modules/week-12/_posts/2000-02-01-Unity.md
@@ -5,13 +5,13 @@ module: 12
 
 # Unity
 
-If you have never used Unity, there is a few things in which we should be aware.  However, we just have to cover a few of the interface components so that we are all on the same page.  First, we need to download Unity.
+If you have never used Unity, there are a few things of which we should be aware.  However, we must review the Unity's interface so that we are all on the same page.  First, we need to download Unity.
 
 ## Download Unity
 
-Unity uses centralized software called the Unity Hub, allowing users to install different versions of Unity on the same machine.  The Unity Hub allows you to support today's projects from today as well as ones in the future or even previous projects.
+Unity uses centralized software called the Unity Hub, allowing users to install different versions of Unity on the same machine.  The Unity Hub enables you to support today's projects from today as well as ones in the future or even previous projects.
 
-1. First go to Unity [Unity](https://unity.com/)
+1. First, go to Unity [Unity](https://unity.com/)
 2. Next, Click on Games
 3. Click on Get Started.
 4. Click the Individual Tab.
