--- a/modules/week-12/_posts/2000-01-01-overview.md
+++ b/modules/week-12/_posts/2000-01-01-overview.md
@@ -13,4 +13,4 @@ Active: {{ site.data.dates[page.module][0] }}
 
 <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/7MeuHO_Zz44" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
-This week we are going to focus on creating a simple Unity project that we can export  into a mobile application.  Unity makes it simple to create cross-platform projects for both Android and iOS while also allowing for web and stand-alone projects too.  The biggest thing we must think about is the controls.  Otherwise, it works well.
+This week we are going to focus on creating a simple Unity project that we can export into a mobile application.  Unity makes it simple to develop cross-platform projects for both Android and iOS while allowing for web and stand-alone projects too.  The biggest thing we must think about is the controls.  Otherwise, it works well.
