updated video links

--- a/modules/week-11/_posts/2010-01-01-homework.md
+++ b/modules/week-11/_posts/2010-01-01-homework.md
@@ -18,4 +18,4 @@ In this homework, you are going to experiment with Cordova and make sure you can
 * Compile using Cordova and create an Android APK.
 * Turn in all pages and your APK.
 
-<iframe width="560" height="315" src="https://umontana.zoom.us/rec/play/uJ18Iumqr2g3GtSW5ASDBvVwW421Laqs0igf-KFYyku0WncKN1qkY7YVN7E3MdJT6W7WS3k9azaKj0-D?continueMode=true" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<a href="https://umontana.zoom.us/rec/play/uJ18Iumqr2g3GtSW5ASDBvVwW421Laqs0igf-KFYyku0WncKN1qkY7YVN7E3MdJT6W7WS3k9azaKj0-D?continueMode=true" target="_new">Video</a>
