--- a/modules/week-11/_posts/2002-01-02-handson.md
+++ b/modules/week-11/_posts/2002-01-02-handson.md
@@ -34,4 +34,4 @@ In this hands-on activity, I want you to create page that not only has some elem
 });
 </script>
 
-<iframe width="560" height="315" src="https://umontana.zoom.us/rec/play/6ZEqIb2o-jg3T4GTtQSDAvZ4W9TrLqOs1XId-6cKzk-1AXUCYAWiNOcWMcR4fsrnZtmfQxN4xRyFLkw?continueMode=true" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<a href="https://umontana.zoom.us/rec/play/6ZEqIb2o-jg3T4GTtQSDAvZ4W9TrLqOs1XId-6cKzk-1AXUCYAWiNOcWMcR4fsrnZtmfQxN4xRyFLkw?continueMode=true" target="_new">Video</a>
