--- a/modules/week-12/_posts/2000-02-01-Unity.md
+++ b/modules/week-12/_posts/2000-02-01-Unity.md
@@ -39,4 +39,4 @@ Wait for the install and then click on Projects.
 3. In the Project Name, enter any name that sounds good to you.
 4. Click Create.
 
-<iframe width="560" height="315" src="https://umontana.zoom.us/rec/play/7sIodOD8-zM3TIDAtQSDUKV5W9Tve_-s0iUbqfoFzU3kUiNQZ1qvY-FGYLEVqZoixJIAwaXTXk4QhlDw?continueMode=true" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<a href="https://umontana.zoom.us/rec/play/7sIodOD8-zM3TIDAtQSDUKV5W9Tve_-s0iUbqfoFzU3kUiNQZ1qvY-FGYLEVqZoixJIAwaXTXk4QhlDw?continueMode=true" target="_new">Video</a>
