--- a/modules/week-13/_posts/2000-01-01-overview.md
+++ b/modules/week-13/_posts/2000-01-01-overview.md
@@ -14,8 +14,8 @@ Active: {{ site.data.dates[page.module][0] }}
 
 ## Xamarin
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mM5_E-2p-aM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/mM5_E-2p-aM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
 
-This week we are going to work on continuing the work that we began with the Canvas element.  If you recall, we have worked with classes, objects, jQuery, JSON, displaying, moving and colliding with other objects.  We will also use the array data structure to keep track of our objects.  So, how are we going to do this?  We are going to practice and practice some more!
+This week we are going to work with Xamarin.  In order to do that, we are going to use Visual Studio Community and then add the Visual Studio Tools for Xamarin development. If you are using Visual Studio for Mac, there is a version for that as well. We are going to create a simple application and then we will learn how to compile and deploy and Android Application.
 
