--- a/modules/week-13/_posts/2003-02-01-homework.md
+++ b/modules/week-13/_posts/2003-02-01-homework.md
@@ -5,3 +5,10 @@ module: 13
 
 # Homework
 
+In this homework, you are going to build our simple application outlined at the beginning of the week. You are going to build the front-end, save all the data in a file and then print out the result on a second page.
+
+1. Get the user's first name.
+2. Get the user's last name.
+    - it is important to separate the first name and last name so we can store them and find them easier.
+3. Let the user choose their arrival date.
+4. Let the user choose their departure date.
