--- a/modules/week-13/_posts/2003-02-01-homework.md
+++ b/modules/week-13/_posts/2003-02-01-homework.md
@@ -12,3 +12,8 @@ In this homework, you are going to build our simple application outlined at the 
     - it is important to separate the first name and last name so we can store them and find them easier.
 3. Let the user choose their arrival date.
 4. Let the user choose their departure date.
+5. Once everything is chosen, click the submit button.
+6. All data should be written to a file.
+7. The user should go to another page.
+8. The data entered on the first page should appear on the second.
+9. Turn in your project and your .apk.
