--- a/modules/week-13/_posts/2003-01-01-handson.md
+++ b/modules/week-13/_posts/2003-01-01-handson.md
@@ -6,7 +6,7 @@ jotted: true
 
 # Hands On
 
-Now that you have some experience building a simple application, can you alter the page to read and write from a file?  Give that a try.  Here are some more resources for you.
+Now that you have some experience building a simple application, can you alter the first and second pages to read and write from a file?  Give that a try.  Here are some more resources for you.
 
 * [Build First Xamarin App](https://docs.microsoft.com/en-us/xamarin/get-started/first-app/?pivots=windows)
 * [File Handling in Xamarin](https://docs.microsoft.com/en-us/xamarin/xamarin-forms/data-cloud/data/files?tabs=windows)
