--- a/modules/week-13/_posts/2003-01-01-handson.md
+++ b/modules/week-13/_posts/2003-01-01-handson.md
@@ -6,6 +6,8 @@ jotted: true
 
 # Hands On
 
+<a href="https://umontana.zoom.us/rec/play/vJV5duyor243SdWW4gSDVKMrW9XvKK6s1nVN_qAPxEe1AHkGNQGnb7AaMbT0DyYSulzqY280PDf5k-mu?continueMode=true&_x_zm_rtaid=DlWtLI-zRlCUpYLqasgjPA.1585764072172.6cf1bc0be13f13c9ac0eb5ca428d956c&_x_zm_rhtaid=855">Video</a>
+
 Now that you have some experience building a simple application, can you alter the first and second pages to read and write from a file?  Give that a try.  Here are some more resources for you.
 
 * [Build First Xamarin App](https://docs.microsoft.com/en-us/xamarin/get-started/first-app/?pivots=windows)
