--- a/modules/week-13/_posts/2003-02-01-homework.md
+++ b/modules/week-13/_posts/2003-02-01-homework.md
@@ -5,6 +5,8 @@ module: 13
 
 # Homework
 
+<a href="https://umontana.zoom.us/rec/play/v8UsJbz5pzo3SNzH4gSDAaB6W429J_6sgyYZ-vsKmhm8UHUBOlf1ZLEVa-a0FxaQSW9S503OIRvFBgE5?continueMode=true&_x_zm_rtaid=DlWtLI-zRlCUpYLqasgjPA.1585764072172.6cf1bc0be13f13c9ac0eb5ca428d956c&_x_zm_rhtaid=855">Video</a>
+
 In this homework, you are going to build our simple application outlined at the beginning of the week. You are going to build the front-end, save all the data in a file and then print out the result on a second page.
 
 1. Get the user's first name.
