--- a/modules/week-13/_posts/2000-01-01-overview.md
+++ b/modules/week-13/_posts/2000-01-01-overview.md
@@ -17,5 +17,4 @@ Active: {{ site.data.dates[page.module][0] }}
 <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/mM5_E-2p-aM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
 
-This week we are going to work with Xamarin.  In order to do that, we are going to use Visual Studio Community and then add the Visual Studio Tools for Xamarin development. If you are using Visual Studio for Mac, there is a version for that as well. We are going to create a simple application and then we will learn how to compile and deploy and Android Application.
-
+This week we are going to work with Xamarin.  To do that, we are going to use Visual Studio Community and then add the Visual Studio Tools for Xamarin development. If you are using Visual Studio for Mac, there is a version for that as well. We are going to create a simple application, and then we will learn how to compile and deploy an Android Application.
