--- a/modules/week-13/_posts/2003-02-01-homework.md
+++ b/modules/week-13/_posts/2003-02-01-homework.md
@@ -7,14 +7,14 @@ module: 13
 
 <a href="https://umontana.zoom.us/rec/play/v8UsJbz5pzo3SNzH4gSDAaB6W429J_6sgyYZ-vsKmhm8UHUBOlf1ZLEVa-a0FxaQSW9S503OIRvFBgE5?continueMode=true&_x_zm_rtaid=DlWtLI-zRlCUpYLqasgjPA.1585764072172.6cf1bc0be13f13c9ac0eb5ca428d956c&_x_zm_rhtaid=855">Video</a>
 
-In this homework, you are going to build our simple application outlined at the beginning of the week. You are going to build the front-end, save all the data in a file and then print out the result on a second page.
+In this homework, you are going to build our simple application outlined at the beginning of the week. You are going to develop the front-end, save all the data in a file, and then print out the result on a second page.
 
 1. Get the user's first name.
 2. Get the user's last name.
-    - it is important to separate the first name and last name so we can store them and find them easier.
+    - it is essential to separate the first name and last name so we can store them and find them more easily later.
 3. Let the user choose their arrival date.
-4. Let the user choose their departure date.
-5. Once everything is chosen, click the submit button.
+4. Let the user select their departure date.
+5. After the user makes all the selections, allow them to click the submit button.
 6. All data should be written to a file.
 7. The user should go to another page.
 8. The data entered on the first page should appear on the second.
