--- a/modules/week-14/_posts/2003-02-01-homework.md
+++ b/modules/week-14/_posts/2003-02-01-homework.md
@@ -5,17 +5,15 @@ module: 14
 
 # Homework
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3HPNL9j_Ag8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-What will you do now?  Implement at least five of these.
+In this homework, you are going to extend the example so that you have multiple shapes bouncing around the screen.
 
-1.	Make the character jump with the spacebar instead of the up button.
-2.	Change the gravity of the stars.
-3.	Change the gravity so each star has its own gravity.
-4.	Use different sprites for the player - look in the assets folder.
-5.	Why not add some spikes you must avoid? You could create a new 'spikes' group and check for collision vs. the player, only instead of killing the spike sprite you kill the player instead. 
-6.	For a non-violent style game you could make it a speed-run and simply challenge them to collect the stars as quickly as possible. 
-7.	Create different graphics to gather with different values if you get them.
-8.	Add more platforms.
-9.	Add a new level if they collect all the stars (or whatever you have on the screen). Show the current level that the player is on.
+1. Add more shapes to your screen.
+2. None of the shapes should be able to leave the screen.
+3. They should all move independent of one another.
+4. They should all have a different speed.
+5. Compile and turn in the APK.
+6. Upload your project to GitHub and submit your link and your APK.
+7. If you want more of a challenge, make it so that the shapes collide off one another as well.
+
 
