updated text and video

--- a/modules/week-14/_posts/2000-01-01-overview.md
+++ b/modules/week-14/_posts/2000-01-01-overview.md
@@ -14,5 +14,4 @@ Active: {{ site.data.dates[page.module][0] }}
 
 ## Android Studio
 
-This is our final week of our formal class.  We will go through the basics of using Android Studio and even create a simple motion based game before exporting to an APK that can be run on a phone, an emulator or BlueStacks.
-
+Welcome to our final week of the regular part of the class.  We will go through the basics of using Android Studio and even create a simple motion-based game before exporting to an APK to be run on a phone, an emulator, or BlueStacks.
