--- a/modules/week-14/_posts/2003-02-01-homework.md
+++ b/modules/week-14/_posts/2003-02-01-homework.md
@@ -5,6 +5,7 @@ module: 14
 
 # Homework
 
+<a href="https://umontana.zoom.us/rec/play/vMB4f7z5rTk3HYHDtASDCqQsW47uJ6mshCMY8qFcn0qxASYBYwKgM7NHYbAJNALUw5H8sweYXsPYVK2p?continueMode=true&_x_zm_rtaid=G4Add6vVSduO6RsyHuAu_A.1586561511718.8a343e83de4846f70f0030d0dc81d501&_x_zm_rhtaid=994">Video Link</a>
 
 In this homework, you are going to extend the example so that you have multiple shapes bouncing around the screen.
 
