--- a/modules/week-14/_posts/2003-02-01-homework.md
+++ b/modules/week-14/_posts/2003-02-01-homework.md
@@ -11,7 +11,7 @@ In this homework, you are going to extend the example so that you have multiple 
 
 1. Add more shapes to your screen.
 2. None of the shapes should be able to leave the screen.
-3. They should all move independent of one another.
+3. They should all move independently of one another.
 4. They should all have a different speed.
 5. Compile and turn in the APK.
 6. Upload your project to GitHub and submit your link and your APK.
